--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,6 @@
-body {
-    display: flex;
-    flex-direction: column;
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
 }
 
-footer {
-    margin-top: auto;
-    font-size: small;
-}
